# basic-erc165

./: README.md  pyproject.toml
contracts/: Basic.vy
contracts/interfaces/: FooBar.vyi
tests/: test_basic.py
